--- a/page/tabBar/homePages/stayWageConfirm/stayWageConfirm.wxml
+++ b/page/tabBar/homePages/stayWageConfirm/stayWageConfirm.wxml
@@ -19,120 +19,128 @@
     
   </view>
   <!-- 个人工资 -->
-  <view wx:if="{{headerBorder}}" class='content bg_fff'> 
-    <block wx:if="{{myWage.data.length>0}}">
-      <view class='com_width list_box'
+  <view wx:if="{{headerBorder}}" class='percontent'> 
+    <view class='one_con' wx:if="{{myWage.data.length>0}}">
+      <view class='bg_fff list_box'
         wx:for="{{myWage.data}}" wx:item="item" wx:key="">
-        <view bindtap="perDetails" data-id="{{item.id}}">
-            <view class='list'>
-              <text class='list_title'>姓名：</text>
-              <text class='list_data'>{{item.name}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>项目名称：</text>
-              <text class='list_data'>{{item.projectName}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>劳务公司：</text>
-              <text class='list_data'>{{item.labourCompanyName}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>班组：</text>
-              <text class='list_data'>{{item.groupName}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>年月：</text>
-              <text class='list_data'>{{item.date}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>应发工资：</text>
-              <text class='list_data'>{{item.payableSalary}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>扣款：</text>
-              <text class='list_data'>{{item.deductionSalary}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>实发工资：</text>
-              <text class='list_data'>{{item.realSalary}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>本次发放：</text>
-              <text class='list_data'>{{item.realSalary}}</text>
-            </view>   
+        <view class='com_width'>
+          <view bindtap="perDetails" data-id="{{item.id}}">
+              <view class='list'>
+                <text class='list_title'>姓名：</text>
+                <text class='list_data'>{{item.name}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>项目名称：</text>
+                <text class='list_data'>{{item.projectName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>劳务公司：</text>
+                <text class='list_data'>{{item.labourCompanyName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>班组：</text>
+                <text class='list_data'>{{item.groupName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>年月：</text>
+                <text class='list_data'>{{item.date}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>应发工资：</text>
+                <text class='list_data'>{{item.payableSalary}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>扣款：</text>
+                <text class='list_data'>{{item.deductionSalary}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>实发工资：</text>
+                <text class='list_data'>{{item.realSalary}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>本次发放：</text>
+                <text class='list_data'>{{item.realSalary}}</text>
+              </view>   
+          </view>
+          <view data-id="{{item.id}}" bindtap='confirmationTap' class='com_width confirmation'>
+            确认
+          </view>  
         </view>
-        <view data-id="{{item.id}}" bindtap='confirmationTap' class='com_width confirmation'>
-          确认
-        </view>  
         
       </view>
-    </block>
+    </view>
   
     <!-- 无工资列表的时候 -->
     <view wx:else class='list_none'>
       <image src="/image/none_record.png"></image>
-      <view>您目前无共工资确认记录</view>
+      <view>您目前无工资确认记录</view>
     </view>
     
   </view>
   <!-- 班组工资 -->
-  <view wx:else class='content bg_fff'> 
-    <block wx:if="{{vipWage.length>0}}">
-      <view class='com_width list_box'
+  <view wx:else class='vipcontent'> 
+
+    <view class='one_con' wx:if="{{vipWage.length>0}}">
+
+      <view class='list_box bg_fff'
         wx:for="{{vipWage}}" wx:item="item" wx:key="">
-        <view bindtap='classDetails' data-month="{{item.date}}"
-          data-groupid="{{item.groupId}}">
-          <view class='list'>
-            <text class='list_title'>项目名称：</text>
-            <text class='list_data'>{{item.projectName}}</text>
-          </view>
+        <view class='com_width'>
+          <view bindtap='classDetails' data-month="{{item.date}}"
+            data-groupid="{{item.groupId}}">
+            <view class='list'>
+              <text class='list_title'>项目名称：</text>
+              <text class='list_data'>{{item.projectName}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>劳务公司：</text>
-            <text class='list_data'>{{item.labourCompanyName}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>劳务公司：</text>
+              <text class='list_data'>{{item.labourCompanyName}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>班组：</text>
-            <text class='list_data'>{{item.groupName}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>班组：</text>
+              <text class='list_data'>{{item.groupName}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>年月：</text>
-            <text class='list_data'>{{item.date}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>年月：</text>
+              <text class='list_data'>{{item.date}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>应发工资：</text>
-            <text class='list_data'>{{item.realSalary}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>应发工资：</text>
+              <text class='list_data'>{{item.realSalary}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>扣款：</text>
-            <text class='list_data'>{{item.deductionSalary}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>扣款：</text>
+              <text class='list_data'>{{item.deductionSalary}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>实发工资：</text>
-            <text class='list_data'>{{item.realSalary}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>实发工资：</text>
+              <text class='list_data'>{{item.realSalary}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>本次发放：</text>
-            <text class='list_data'>{{item.payableSalary}}</text>
+            <view class='list'>
+              <text class='list_title'>本次发放：</text>
+              <text class='list_data'>{{item.payableSalary}}</text>
+            </view>
+          </view>
+          <view bindtap='classDetails' data-month="{{item.date}}"
+            data-groupid="{{item.groupId}}" class='com_width confirmation'>
+            确认
           </view>
         </view>
-        <view data-id="{{item.groupId}}" bindtap='confirmationTap' 
-          class='com_width confirmation'>
-          确认
-        </view>
+       
       </view>
       
-    </block>
+    </view>
+
     <!-- 无工资列表的时候 -->
     <view wx:else class='list_none'>
       <image src="/image/none_record.png"></image>
-      <view>您目前无共工资确认记录</view>
+      <view>您目前无工资确认记录</view>
     </view>
   </view>
 
