--- a/page/tabBar/homePages/stayWageConfirm/stayWageConfirm.wxss
+++ b/page/tabBar/homePages/stayWageConfirm/stayWageConfirm.wxss
@@ -55,10 +55,18 @@
 }
 
 /* content */
-.content{
+.vipcontent,.percontent{
   margin-top: 24rpx;
-  padding: 20rpx 0 40rpx 0;
 }
+.one_con .list_box{
+  margin-top: 70rpx;
+  padding-bottom:30rpx;
+  padding-top: 20rpx;
+}
+.one_con :first-child{
+  margin-top: 0;
+} 
+
 .list{
   padding: 10rpx 0; 
   font-size: 28rpx;
