--- a/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
+++ b/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
@@ -26,5 +26,5 @@
     <button>获取验证码</button>
   </view>
 
-  <view class='bg_blue com_width btn'>{{btnFont}}</view>
+  <view bindtap='confirmBtn' class='bg_blue com_width btn'>{{btnFont}}</view>
 </view>
