--- a/page/tabBar/homePages/stayworkload/stayworkload.wxml
+++ b/page/tabBar/homePages/stayworkload/stayworkload.wxml
@@ -20,92 +20,100 @@
     
   </view>
     <!-- 个人工作量 -->
-    <view wx:if="{{headerBorder}}" class='content bg_fff'> 
-      <block wx:if="{{perDetails.t.length>0}}">
-        <view class='com_width list_box'
+    <view wx:if="{{headerBorder}}" class='percontent'> 
+      <view class='one_con' wx:if="{{perDetails.t.length>0}}">
+        <view class='bg_fff list_box'
           wx:for='{{perDetails.t}}'wx:key="" wx:item="item">
-          <view bindtap='goDetails' data-groupId="{{item.groupId}}" 
-            data-month="{{item.startDate}}">
-            <view class='list'>
-              <text class='list_title'>姓名：</text>
-              <text class='list_data'>{{item.userName}}</text>
+          <view class='com_width'>
+            <view bindtap='goDetails' data-groupId="{{item.groupId}}" 
+              data-month="{{item.startDate}}">
+              <view class='list'>
+                <text class='list_title'>姓名：</text>
+                <text class='list_data'>{{item.userName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>项目名称：</text>
+                <text class='list_data'>{{item.projectName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>劳务公司：</text>
+                <text class='list_data'>{{item.labourCompanyName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>班组：</text>
+                <text class='list_data'>{{item.groupName}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>年月：</text>
+                <text class='list_data'>{{item.startDate}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>工作量：</text>
+                <text class='list_data'>{{item.quantity}}</text>
+              </view>
             </view>
-            <view class='list'>
-              <text class='list_title'>项目名称：</text>
-              <text class='list_data'>{{item.projectName}}</text>
+            <view bindtap='goDetails' data-groupId="{{item.groupId}}" 
+              data-month="{{item.startDate}}" 
+              class='com_width confirmation'>
+              确认
             </view>
-            <view class='list'>
-              <text class='list_title'>劳务公司：</text>
-              <text class='list_data'>{{item.labourCompanyName}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>班组：</text>
-              <text class='list_data'>{{item.groupName}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>年月：</text>
-              <text class='list_data'>{{item.startDate}}</text>
-            </view>
-            <view class='list'>
-              <text class='list_title'>工作量：</text>
-              <text class='list_data'>{{item.quantity}}</text>
-            </view>
-          </view>
-          <view data-groupId="{{item.groupId}}" bindtap='confirmationTap' 
-            class='com_width confirmation'>
-            确认
           </view>
         </view>
-      </block>
+      </view>
 
       <!-- 无工作量的时候 -->
-      <view wx:else class='list_none'>
+      <view class='one_con' wx:else class='list_none'>
         <image src="/image/none_record.png"></image>
-        <view>您目前无共工资确认记录</view>
+        <view>您目前无工作量确认记录</view>
       </view>
       
     </view>
     <!-- 班组工作量 -->
-    <block wx:else>
-      <block wx:if="{{vipDetails.length>0}}">
-        <view bindtap='classDetails' class='content bg_fff' 
-          wx:for='{{vipDetails}}'wx:key="" wx:item="item" 
+    <view wx:else class='vipcontent'>
+      <view class='one_con' wx:if="{{vipDetails.length>0}}">
+        <view class='bg_fff list_box' wx:for='{{vipDetails}}'wx:key="" wx:item="item" 
           data-groupid="{{item.groupId}}" data-groupName="{{item.groupName}}"
           data-titledate="{{item.startDate}}"> 
-          <view class='com_width list_box'>
-            <view class='list'>
-              <text class='list_title'>项目名称：</text>
-              <text class='list_data'>{{item.projectName}}</text>
-            </view>
+          <view class='com_width'>
+            <view class='bg_fff'>
+              <view class='list'>
+                <text class='list_title'>项目名称：</text>
+                <text class='list_data'>{{item.projectName}}</text>
+              </view>
 
-            <view class='list'>
-              <text class='list_title'>劳务公司：</text>
-              <text class='list_data'>{{item.labourCompanyName}}</text>
-            </view>
+              <view class='list'>
+                <text class='list_title'>劳务公司：</text>
+                <text class='list_data'>{{item.labourCompanyName}}</text>
+              </view>
 
-            <view class='list'>
-              <text class='list_title'>班组：</text>
-              <text class='list_data'>{{item.groupName}}</text>
-            </view>
+              <view class='list'>
+                <text class='list_title'>班组：</text>
+                <text class='list_data'>{{item.groupName}}</text>
+              </view>
 
-            <view class='list'>
-              <text class='list_title'>年月：</text>
-              <text class='list_data'>{{item.startDate}}</text>
+              <view class='list'>
+                <text class='list_title'>年月：</text>
+                <text class='list_data'>{{item.startDate}}</text>
+              </view>
+              <view class='list'>
+                <text class='list_title'>工作量：</text>
+                <text class='list_data'>{{item.quantity}}</text>
+              </view>
             </view>
-            <view class='list'>
-              <text class='list_title'>工作量：</text>
-              <text class='list_data'>{{item.quantity}}</text>
+            <view bindtap='classDetails' class='com_width confirmation'
+              data-groupid="{{item.groupId}}" data-groupName="{{item.groupName}}"
+              data-titledate="{{item.startDate}}">
+              确认
             </view>
           </view>
-          <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
         </view>
-      </block>
+      </view>
       <!-- 无工作量的时候 -->
       <view wx:else class='list_none'>
         <image src="/image/none_record.png"></image>
-        <view>您目前无共工资确认记录</view>
+        <view>您目前无工作量资确认记录</view>
       </view>
-    </block>
+    </view>
   
 
   <!-- 浮层 -->
