--- a/page/tabBar/mine/mine.wxml
+++ b/page/tabBar/mine/mine.wxml
@@ -17,7 +17,7 @@
       
       </view>
       <!-- 实名认证 -->
-      <view class='bg_fff margin_top' bindtap='goAuthentication'>
+      <view hidden="{{mineData.isAuth == 1}}" class='bg_fff margin_top' bindtap='goAuthentication'>
       
         <view class='display_flex com_list certification'>
           <view class='icon_box'>
@@ -32,23 +32,14 @@
         </view>
       </view>
       <!-- list -->
-      <view bindtap='goContacts' class='bg_fff margin_top '>  
-        <view class='display_flex com_list'>
-          <view class='icon_box'>
-            <text class='fa com_icon color_blue fa-address-card-o'></text>
-          </view>
-          <view class='com_list_right display_flex'>
-            <text>紧急联系人</text>
-            <text class='fa com_right fa-chevron-right'></text>
-          </view> 
-        </view>
+      <view class='bg_fff margin_top '>  
 
-        <view class='display_flex com_list'>
+        <view class='display_flex com_list' bindtap='goMyProject'>
           <view class='icon_box'>
-            <text class='fa color_3 com_icon color_blue fa-balance-scale'></text>
+            <text class='fa color_4 com_icon color_blue fa-file-text-o'></text>
           </view>
           <view class='com_list_right display_flex'>
-            <text>个人奖惩</text>
+            <text>绑定工资卡</text>
             <text class='fa com_right fa-chevron-right'></text>
           </view> 
         </view>
@@ -72,6 +63,27 @@
             <text class='fa com_right fa-chevron-right'></text>
           </view> 
         </view>
+
+        <view bindtap='goContacts' class='display_flex com_list'>
+          <view class='icon_box'>
+            <text class='fa com_icon color_blue fa-address-card-o'></text>
+          </view>
+          <view class='com_list_right display_flex'>
+            <text>紧急联系人</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+
+        <view class='display_flex com_list'>
+          <view class='icon_box'>
+            <text class='fa color_3 com_icon color_blue fa-balance-scale'></text>
+          </view>
+          <view class='com_list_right display_flex'>
+            <text>个人奖惩</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+        
         <view bindtap='goFeedback' class='display_flex com_list'>
           <view class='icon_box'>
             <text class='fa color_6 com_icon color_blue fa-handshake-o'></text>
@@ -86,7 +98,7 @@
       <view bindtap='eixt' class='out bg_fff'>退出</view>
   </view>
   <!-- 实名认证浮层 -->
-  <view  wx:if="{{myInfo.isAuth == 0}}" class='box_block'>
+  <view wx:if="{{blockIsShow}}" class='box_block'>
     <view class='bg_fff block_view'>
       <view class='block_title'>您未实名认证！</view>
       <view class="block_content color_gray">
