--- a/page/tabBar/minePages/bindBankCard/bindBankCard.wxml
+++ b/page/tabBar/minePages/bindBankCard/bindBankCard.wxml
@@ -4,7 +4,7 @@
   <view class='border_t_b bg_fff'>
     <view class='card_num'>
       <text class='num'>银行卡号</text>
-      <input data-types="0" bindinput='getInputVal' class='card_input' placeholder='请输入银行卡号'></input>
+      <input bindinput='getUserIdCardNumber' data-types="0" class='card_input' placeholder='请输入银行卡号'></input>
       <text class='color_gray fa fa-camera'></text>
     </view>
   </view>
@@ -17,9 +17,9 @@
     </view>
      <view class='card_num'>
       <text class='com_titles'>开户行</text>
-      <input data-types="2" bindinput='getInputVal' class='com_input' placeholder='请输入开户行'></input>
+      <input disabled='ture' data-types="2" bindinput='getInputVal' class='com_input' placeholder='开户行' value='{{cardType}}'></input>
     </view>
   </view>
   <!-- 下一步 -->
-  <view bindtap='nextTap' class='com_footer_btn bg_blue'>下一步</view>
+  <view bindtap='next' class='com_footer_btn bg_blue'>下一步</view>
 </view>
