--- a/page/tabBar/messagePages/city/city.wxml
+++ b/page/tabBar/messagePages/city/city.wxml
@@ -30,21 +30,20 @@
   style="height:{{winHeight}}px" bindscroll="bindScroll" 
   scroll-into-view="{{scrollTopId}}" 
   scroll-top="{{scrollTop}}">
-  <!--<view class="hotcity-common thisCity">当前选择城市</view>
-  <view class="thisCityName">{{city}}</view>-->
+ 
   <view>
-    <!-- <text class="hotcity hotcity-common">热门城市</text> -->
     <view class="weui-grids">
       <block wx:for-items="{{hotcityList}}" wx:key="">
-        <view class="weui-grid" data-id="{{item.id}}" data-city="{{item.city}}" bindtap="bindHotCity" >
+        <view class="weui-grid" data-id="{{item.id}}" data-code="{{item.code}}" data-city="{{item.city}}" bindtap="bindHotCity" >
           <view class="weui-grid__label">{{item.city}}</view>
         </view>
       </block>
     </view>
   </view>
+
   <view class="selection" wx:for="{{cityList}}" wx:key="{{item.initial}}">
     <view class="item_letter"  id="{{item.initial}}">{{item.initial}}</view>
-    <view class="item_city"  wx:for="{{item.cityInfo}}" wx:key="" wx:for-item="ct" data-id="{{ct.id}}" data-city="{{ct.city}}" bindtap="bindCity">
+    <view class="item_city"  wx:for="{{item.cityInfo}}" wx:key="" wx:for-item="ct" data-id="{{ct.id}}" data-code="{{ct.code}}" data-city="{{ct.city}}" bindtap="bindCity">
       {{ct.city}}
     </view>
   </view>
