--- a/page/tabBar/minePages/feedback/feedback.wxml
+++ b/page/tabBar/minePages/feedback/feedback.wxml
@@ -2,8 +2,8 @@
 <view class='add_box'>
   <view class='bg_fff content'>
     <view class='com_width'>
-      <textarea placeholder="请输入您的意见" auto-focus />
+      <textarea bindinput='getVal' placeholder="请输入您的意见" auto-focus />
     </view>
   </view>
-  <view class='bg_blue com_footer_btn'>确定</view>
+  <view bindtap='footerTap' class='bg_blue com_footer_btn'>确定</view>
 </view>
